# pingo

./: .gitignore  CLAUDE.md  README.md  config-template.json  config.py  constraints.txt  gvar.py  main.py  pingo.py  pyproject.toml  requirements.txt  run.ps1  test.py
bgunit/: README.md  __init__.py  bgunit.py  config.json.template  highlightindex.json  pageindex.json  systemindex.json
common/: error_handler.py  exceptions.py  fallback_service.py  log.py  tmp_dir.py  utils.py
db/: SQL.txt  pingo.db
docker/: Dockerfile.latest  build.latest.sh  docker-compose.yml  entrypoint.sh  run.sh
docs/: ERROR_HANDLING_GUIDE.md
examples/: error_handling_usage.py
orator/: sysintroduction.py
pagecontrol/: README.md  config.json.template  pagecontrol.py
pem/: pingo.crt  pingo.csr  pingo.key  pingo.key.org
robot/: AI.py  ASR.py  NLU.py  Player.py  TTS.py  conversation.py  detector.py  mcpserver.py
server/: apiHandler.py  baseHandler.py  billItemsHandler.py  billpageHandler.py  billsHandler.py  chatHandler.py  chatWebSocketHandler.py  configHandler.py  configPageHandler.py  getHistoryHandler.py  getLogHandler.py  logPageHandler.py  loginHandler.py  logoutHandler.py  mainHandler.py  menuHandler.py  menuItemsHandler.py  menupageHandler.py  messageUpdatesHandler.py  operateHandler.py  server.py  switchEnableStatusHandler.py  voiceHandler.py
static/: Hey-Pingo_en_linux_v3_0_0.ppn  Hey-Pingo_en_windows_v3_0_0.ppn  Hey-pingo_en_linux_v2_2_0.ppn  Hey-pingo_en_windows_v2_2_0.ppn  Hi-pingo_en_windows_v3_0_0.ppn  README.md  pingo-pingo_en_linux_v2_2_0.ppn
test/: chat.py  (+2 more)
(+30 files in other folders)
